tests/ui/storage_class/mutability-errors.stderr
error: entry-point requires a mutable reference...
  --> $DIR/mutability-errors.rs:10:78
   |
10 |     #[spirv(descriptor_set = 0, binding = 0)] implicit_uniform_constant_mut: &mut Image2d,
   |                                                                              ^^^^^^^^^^^^
   |
note: ...but storage class `UniformConstant` is read-only
  --> $DIR/mutability-errors.rs:10:78
   |
10 |     #[spirv(descriptor_set = 0, binding = 0)] implicit_uniform_constant_mut: &mut Image2d,
   |                                                                              ^^^^^^^^^^^^ `UniformConstant` deduced from type

error: entry-point requires a mutable reference...
  --> $DIR/mutability-errors.rs:11:69
   |
11 |     #[spirv(uniform, descriptor_set = 0, binding = 0)] uniform_mut: &mut u32,
   |                                                                     ^^^^^^^^
   |
note: ...but storage class `Uniform` is read-only
  --> $DIR/mutability-errors.rs:11:13
   |
11 |     #[spirv(uniform, descriptor_set = 0, binding = 0)] uniform_mut: &mut u32,
   |             ^^^^^^^ `Uniform` specified in attribute

error: entry-point requires interior mutability...
  --> $DIR/mutability-errors.rs:12:78
   |
12 |     #[spirv(uniform, descriptor_set = 0, binding = 0)] uniform_interior_mut: &AtomicU32,
   |                                                                              ^^^^^^^^^^
   |
note: ...but storage class `Uniform` is read-only
  --> $DIR/mutability-errors.rs:12:13
   |
12 |     #[spirv(uniform, descriptor_set = 0, binding = 0)] uniform_interior_mut: &AtomicU32,
   |             ^^^^^^^ `Uniform` specified in attribute

error: entry-point requires a mutable reference...
  --> $DIR/mutability-errors.rs:13:48
   |
13 |     #[spirv(push_constant)] push_constant_mut: &mut u32,
   |                                                ^^^^^^^^
   |
note: ...but storage class `PushConstant` is read-only
  --> $DIR/mutability-errors.rs:13:13
   |
13 |     #[spirv(push_constant)] push_constant_mut: &mut u32,
   |             ^^^^^^^^^^^^^ `PushConstant` specified in attribute

error: entry-point requires interior mutability...
  --> $DIR/mutability-errors.rs:14:57
   |
14 |     #[spirv(push_constant)] push_constant_interior_mut: &AtomicU32,
   |                                                         ^^^^^^^^^^
   |
note: ...but storage class `PushConstant` is read-only
  --> $DIR/mutability-errors.rs:14:13
   |
14 |     #[spirv(push_constant)] push_constant_interior_mut: &AtomicU32,
   |             ^^^^^^^^^^^^^ `PushConstant` specified in attribute

error: aborting due to 5 previous errors

